crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__require_query_table_schema__test__select_err.snap
---
source: crates/squawk_linter/src/rules/require_query_table_schema.rs
expression: "lint_errors(sql, Rule::RequireQueryTableSchema)"
---
warning[require-query-table-schema]: Table name is not schema-qualified. Use schema.table (e.g., public.my_table).
  ╭▸ 
2 │ SELECT * FROM my_table;
  ╰╴              ━━━━━━━━
